# fiap-soat-video-shared

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  python-tests.yml  test-and-deploy.yaml
src/video_processor_shared/: __init__.py
src/video_processor_shared/aws/: __init__.py  s3_storage.py  ses_service.py  sns_service.py  sqs_service.py
src/video_processor_shared/contracts/: __init__.py  api_responses.py
src/video_processor_shared/domain/: __init__.py
src/video_processor_shared/domain/events/: __init__.py  base_event.py  job_completed.py  job_failed.py  job_started.py  video_uploaded.py
src/video_processor_shared/domain/exceptions/: __init__.py  base.py  job_exceptions.py  user_exceptions.py  video_exceptions.py
src/video_processor_shared/domain/value_objects/: __init__.py  email.py  job_status.py  password.py
src/video_processor_shared/dto/: __init__.py  job_dto.py  user_dto.py  video_dto.py
tests/: __init__.py  test_aws_unit.py  test_dto_contracts_and_domain_unit.py  test_events.py  test_integration_pipeline.py  test_value_objects.py
